5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1582_579.log
== SUBMITION (2019-03-14 17:35:17) 
-- CODE:
print(A UFAM tem, 2016-1909, anos de fundacao)
-- EXECUTION TIME:
0.162846
-- ERROR:
  File "/home/codebench/codes/1582/579/main.py", line 1
    print(A UFAM tem, 2016-1909, anos de fundacao)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:37:12) 
-- CODE:
print("A UFAM tem", 2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.137818
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:37:23) 
-- CODE:
print("A UFAM tem", 2016-1909,"anos de fundacao.")
-- EXECUTION TIME:
0.153456
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
